<resources>
    <string name="app_name">BookShelfApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="new_books">New Books</string>
    <string name="save">Save</string>
    <string name="show_books">Show Books</string>
</resources>